# teloscore

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
comptg2/: compare.py  entry.py
teloscore/: compare.py  entry.py  plot.py  scoring.py  types.py  utils.py
test_data/: out_0_1_0.tsv  out_0_1_0_HG002_HG004.tsv  tlens_by_allele_HG002.tsv  tlens_by_allele_HG003.tsv  tlens_by_allele_HG004.tsv
tests/: test_compare.py
