[tool.poetry]
name = "teloscore"
version = "0.4.0"
description = "Telomeric allele scoring tool for output from Telogator2."
authors = ["David Lougheed <david.lougheed@mail.mcgill.ca>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.scripts]
teloscore = "teloscore.entry:main"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.10.1"
parasail = "^1.3.4"
numpy = "^2.2.3"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
